Flask-Login Changelog
=====================

Here you can see the full list of changes between each Flask-Login release.

Version 0.2.11
--------------

Release on May 19th, 2014

- Fixes missing request loader invocation when authorization header exists.


Version 0.2.10
--------------

Released on March 9th, 2014

- Generalized `request_loader` introduced; ability to log users in via
  customized callback over request.
- Fixes request context dependency by explicitly checking `has_request_context`.
- Fixes remember me issues since lazy user loading changes.


Version 0.2.9
-------------

Released on December 28th, 2013

- Fixes anonymous user assignment.
- Fixes localization in Python 3.


Version 0.2.8
-------------

Released on December 21st 2013

- Support login via authorization header. This allows login via Basic Auth, for
  example. Useful in an API presentation context.
- Ability to override user ID method name. This is useful if the ID getter is
  named differently than the default.
- Session data is now only read when the user is requested. This can be
  beneficial for cookie and caching control when differenting between
  requests that use user information for rendering and ones where all users
  (including anonymous) get the same result (e.g. static pages)
- BREAKING: User *must* always be accessed through the ``current_user``
  local. This breaks any previous direct access to ``_request_ctx.top.user``.
  This is because user is not loaded until current_user is accessed.
- Fixes unnecessary access to the session when the user is anonymous
  and session protection is active.
  see https://github.com/maxcountryman/flask-login/issues/120
- Fixes issue where order dependency of applying the login manager
  before dependent applications was required.
  see https://github.com/mattupstate/flask-principal/issues/22
- Fixes Python 3 ``UserMixin`` hashing.
- Fixes incorrect documentation.


Previous Versions
=================
