@@ -499,12 +499,15 @@ class UserMixin(object):
     This provides default implementations for the methods that Flask-Login
     expects user objects to have.
     '''
+    @property
     def is_active(self):
         return True
 
+    @property
     def is_authenticated(self):
         return True
 
+    @property
     def is_anonymous(self):
         return False
 
@@ -541,12 +544,15 @@ class AnonymousUserMixin(object):
     '''
     This is the default object for representing an anonymous user.
     '''
+    @property
     def is_authenticated(self):
         return False
 
+    @property
     def is_active(self):
         return False
 
+    @property
     def is_anonymous(self):
         return True
 
@@ -673,7 +679,7 @@ def login_fresh():
 def login_user(user, remember=False, force=False):
     '''
     Logs a user in. You should pass the actual user object to this. If the
-    user's `is_active` method returns ``False``, they will not be logged in
+    user's `is_active` property is ``False``, they will not be logged in
     unless `force` is ``True``.
 
     This will return ``True`` if the log in attempt succeeds, and ``False`` if
@@ -688,7 +694,7 @@ def login_user(user, remember=False, force=False):
         them in regardless. Defaults to ``False``.
     :type force: bool
     '''
-    if not force and not user.is_active():
+    if not force and not user.is_active:
         return False
 
     user_id = getattr(user, current_app.login_manager.id_attribute)()
@@ -753,7 +759,7 @@ def login_required(func):
     If there are only certain times you need to require that your user is
     logged in, you can do so with::
 
-        if not current_user.is_authenticated():
+        if not current_user.is_authenticated:
             return current_app.login_manager.unauthorized()
 
     ...which is essentially the code that this function adds to your views.
@@ -770,7 +776,7 @@ def login_required(func):
     def decorated_view(*args, **kwargs):
         if current_app.login_manager._login_disabled:
             return func(*args, **kwargs)
-        elif not current_user.is_authenticated():
+        elif not current_user.is_authenticated:
             return current_app.login_manager.unauthorized()
         return func(*args, **kwargs)
     return decorated_view
@@ -798,7 +804,7 @@ def fresh_login_required(func):
     def decorated_view(*args, **kwargs):
         if current_app.login_manager._login_disabled:
             return func(*args, **kwargs)
-        elif not current_user.is_authenticated():
+        elif not current_user.is_authenticated:
             return current_app.login_manager.unauthorized()
         elif not login_fresh():
             return current_app.login_manager.needs_refresh()
